--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,1 +1,19 @@
-$text: #333;
+$primaryColor: #F2B705;
+$secondaryColor: #182233;
+$tertiaryColor: #565759;
+
+$black: #000;
+$white: #fff;
+
+$greyOne: #1F2937;
+$greyTwo: #374151;
+$greyThree: #4B5563;
+$greyFour: #6B7280;
+$greyFive: #9CA3AF;
+$greySix: #D6D9DE;
+$greySeven: #F3F4F6;
+
+$stateInfo: #2F80ED;
+$stateSuccess: #27AE60;
+$stateWarning: #E2B93B;
+$stateError: #EB5757;
