--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;600&display=swap');
+@import url('../fonts/style.css');
