--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,3 +4,88 @@
 .container {
   padding: 0 30px;
 }
+
+.section {
+  overflow: hidden;
+}
+
+// Lists
+.list {
+  position: relative;
+  overflow-x: auto;
+
+  &.qtd-2 {
+    width: calc(2 * 220px);
+  }
+  &.qtd-3 {
+    width: calc(3 * 220px);
+  }
+  &.qtd-4 {
+    width: calc(4 * 220px);
+  }
+  &.qtd-5 {
+    width: calc(5 * 220px);
+  }
+  &.qtd-6 {
+    width: calc(6 * 220px);
+  }
+  &.qtd-7 {
+    width: calc(7 * 220px);
+  }
+  &.qtd-8 {
+    width: calc(8 * 220px);
+  }
+  &.qtd-9 {
+    width: calc(9 * 220px);
+  }
+  &.qtd-10 {
+    width: calc(10 * 220px);
+  }
+
+  .item {
+    display: flex;
+    align-items: center;
+    float: left;
+    min-width: 220px;
+
+    .info {
+      margin-left: 15px;
+    }
+
+    span {
+      display: block;
+    }
+
+    .explicit {
+      display: inline-block;
+      width: 20px;
+      background-color: $greyFive;
+      color: $black;
+      font-size: 12px;
+      font-weight: bold;
+      line-height: 20px;
+      text-align: center;
+      border-radius: 3px;
+    }
+  }
+}
+
+// Splide
+.splide--ttb {
+  &> .splide__pagination,
+  &>.splide__slider>.splide__pagination {
+    max-height: 280px;
+    left: .5em;
+    right: auto;
+  }
+
+  .splide__pagination__page {
+    transition: all .3s ease-in;
+    &.is-active {
+      height: 16px;
+      transform: none;
+      border-radius: 8px;
+      background: $primaryColor;
+    }
+  }
+}
