Carousel is better and added a mask audio

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-  color: $greySix;
+  color: $graySix;
   font: 16px 'Assistant', Arial, Helvetica, sans-serif;  
   line-height: 1.4em;
 }
