--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,13 +5,13 @@ $tertiaryColor: #565759;
 $black: #000;
 $white: #fff;
 
-$greyOne: #1F2937;
-$greyTwo: #374151;
-$greyThree: #4B5563;
-$greyFour: #6B7280;
-$greyFive: #9CA3AF;
-$greySix: #D6D9DE;
-$greySeven: #F3F4F6;
+$grayOne: #1F2937;
+$grayTwo: #374151;
+$grayThree: #4B5563;
+$grayFour: #6B7280;
+$grayFive: #9CA3AF;
+$graySix: #D6D9DE;
+$graySeven: #F3F4F6;
 
 $stateInfo: #2F80ED;
 $stateSuccess: #27AE60;
