--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -5,6 +5,13 @@
   scroll-behavior: smooth;
   border: 0;
   outline: 0;
+
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
